--- a/Kaboom/Kaboom.csproj
+++ b/Kaboom/Kaboom.csproj
@@ -39,6 +39,9 @@
     <ApplicationIcon>Icons\mine.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="JetBrains.Annotations, Version=2019.1.3.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
+      <HintPath>..\packages\JetBrains.Annotations.2019.1.3\lib\net20\JetBrains.Annotations.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -59,6 +62,14 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\KaboomBoardControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Views\KaboomCellControl.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -66,6 +77,17 @@
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="Converters\CellStateToIconSourceConverter.cs" />
+    <Compile Include="DesignerSampleData\SampleData.cs" />
+    <Compile Include="ViewModels\KaboomCellModel.cs" />
+    <Compile Include="ViewModels\KaboomBoardModel.cs" />
+    <Compile Include="ViewModels\KaboomCellState.cs" />
+    <Compile Include="Views\KaboomBoardControl.xaml.cs">
+      <DependentUpon>KaboomBoardControl.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\KaboomCellControl.xaml.cs">
+      <DependentUpon>KaboomCellControl.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
@@ -90,6 +112,7 @@
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
+    <None Include="packages.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -101,20 +124,36 @@
   <ItemGroup>
     <Resource Include="Icons\flag.ico" />
     <Resource Include="Icons\mine.ico" />
-    <Resource Include="Icons\mine2.ico" />
-    <Resource Include="Icons\mine3.ico" />
-    <Resource Include="Icons\mine4.ico" />
-    <Resource Include="Icons\smiley.ico" />
-    <Resource Include="Icons\smiley1.ico" />
-    <Resource Include="Icons\smiley2.ico" />
-    <Resource Include="Icons\smiley3.ico" />
-    <Resource Include="Icons\tile.ico" />
-    <Resource Include="Icons\tile2.ico" />
-    <Resource Include="Icons\tile3.ico" />
-    <Resource Include="Icons\tile4.ico" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="ViewModels\" />
+    <Resource Include="Icons\empty.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\one.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\eight.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\two.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\three.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\four.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\five.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\six.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\seven.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\tile.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
