--- a/Kaboom/Kaboom.csproj
+++ b/Kaboom/Kaboom.csproj
@@ -80,12 +80,16 @@
     </Compile>
     <Compile Include="Converters\CellStateToIconSourceConverter.cs" />
     <Compile Include="DesignerSampleData\SampleData.cs" />
+    <Compile Include="ViewModels\CustomCommand.cs" />
     <Compile Include="ViewModels\KaboomCellModel.cs" />
     <Compile Include="ViewModels\KaboomBoardModel.cs" />
     <Compile Include="ViewModels\KaboomCellState.cs" />
+    <Compile Include="ViewModels\MainWindowModel.cs" />
     <Compile Include="Views\KaboomBoardControl.xaml.cs">
       <DependentUpon>KaboomBoardControl.xaml</DependentUpon>
     </Compile>
+    <Compile Include="ViewModels\KaboomCellClickEventArgs.cs" />
+    <Compile Include="ViewModels\KaboomCellClickType.cs" />
     <Compile Include="Views\KaboomCellControl.xaml.cs">
       <DependentUpon>KaboomCellControl.xaml</DependentUpon>
     </Compile>
@@ -122,7 +126,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Resource Include="Icons\flag.ico" />
     <Resource Include="Icons\mine.ico" />
   </ItemGroup>
   <ItemGroup>
@@ -154,6 +157,15 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Icons\tile.ico" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\KaboomEngine\KaboomEngine.csproj">
+      <Project>{859c8043-9885-49b9-be40-b9f437a2272d}</Project>
+      <Name>KaboomEngine</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="Icons\flag.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
