Extracted IKaboomField interface as preparation to develop the Kaboom version parallel to the Minesweeper version

--- a/KaboomEngine/KaboomEngine.csproj
+++ b/KaboomEngine/KaboomEngine.csproj
@@ -57,7 +57,10 @@
     <Compile Include="Cell.cs" />
     <Compile Include="CellCollection.cs" />
     <Compile Include="FieldState.cs" />
-    <Compile Include="Field.cs" />
+    <Compile Include="MinesweeperField.cs" />
+    <Compile Include="IKaboomField.cs" />
+    <Compile Include="KaboomFieldExtensions.cs" />
+    <Compile Include="KaboomFieldProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
