Preparing KaboomField class, Encapsulating cell creation into CellCollection

--- a/KaboomEngine/KaboomEngine.csproj
+++ b/KaboomEngine/KaboomEngine.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Cell.cs" />
     <Compile Include="CellCollection.cs" />
     <Compile Include="FieldState.cs" />
+    <Compile Include="KaboomField.cs" />
     <Compile Include="MinesweeperField.cs" />
     <Compile Include="IKaboomField.cs" />
     <Compile Include="KaboomFieldExtensions.cs" />
