--- a/KaboomEngine/KaboomEngine.csproj
+++ b/KaboomEngine/KaboomEngine.csproj
@@ -57,11 +57,14 @@
     <Compile Include="Cell.cs" />
     <Compile Include="CellCollection.cs" />
     <Compile Include="FieldState.cs" />
-    <Compile Include="KaboomField.cs" />
-    <Compile Include="MinesweeperField.cs" />
-    <Compile Include="IKaboomField.cs" />
-    <Compile Include="KaboomFieldExtensions.cs" />
-    <Compile Include="KaboomFieldProvider.cs" />
+    <Compile Include="ICell.cs" />
+    <Compile Include="ICellCollection.cs" />
+    <Compile Include="Kaboom\KaboomField.cs" />
+    <Compile Include="Kaboom\KaboomState.cs" />
+    <Compile Include="Minesweeper\MinesweeperField.cs" />
+    <Compile Include="IField.cs" />
+    <Compile Include="FieldExtensions.cs" />
+    <Compile Include="FieldProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -77,6 +80,7 @@
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.3\analyzers\dotnet\cs\Microsoft.NetFramework.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.3\analyzers\dotnet\cs\Microsoft.NetFramework.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
