--- a/Kaboom/App.config
+++ b/Kaboom/App.config
@@ -1,6 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
+    <configSections>
+        <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="Com.Revo.Games.Kaboom.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
+        </sectionGroup>
+    </configSections>
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+    <userSettings>
+        <Com.Revo.Games.Kaboom.Properties.Settings>
+            <setting name="Beginner" serializeAs="String">
+                <value>True</value>
+            </setting>
+            <setting name="Advanced" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Expert" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Custom" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="Width" serializeAs="String">
+                <value>9</value>
+            </setting>
+            <setting name="Height" serializeAs="String">
+                <value>9</value>
+            </setting>
+            <setting name="Mines" serializeAs="String">
+                <value>10</value>
+            </setting>
+        </Com.Revo.Games.Kaboom.Properties.Settings>
+    </userSettings>
 </configuration>
