--- a/Kaboom/App.config
+++ b/Kaboom/App.config
@@ -31,6 +31,9 @@
             <setting name="Mines" serializeAs="String">
                 <value>10</value>
             </setting>
+            <setting name="Debug" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Com.Revo.Games.Kaboom.Properties.Settings>
     </userSettings>
 </configuration>
