--- a/Kaboom/Properties/Settings.settings
+++ b/Kaboom/Properties/Settings.settings
@@ -23,5 +23,8 @@
     <Setting Name="Mines" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">10</Value>
     </Setting>
+    <Setting Name="Debug" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">False</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
