--- a/KaboomEngine/KaboomEngine.csproj
+++ b/KaboomEngine/KaboomEngine.csproj
@@ -63,7 +63,8 @@
     <Compile Include="FieldState.cs" />
     <Compile Include="ICell.cs" />
     <Compile Include="ICellCollection.cs" />
-    <Compile Include="Kaboom\ConstraintGenerator.cs" />
+    <Compile Include="Kaboom\ConstraintsGenerator.cs" />
+    <Compile Include="Kaboom\IGenerateConstraints.cs" />
     <Compile Include="Kaboom\ISolveKaboomField.cs" />
     <Compile Include="Kaboom\KaboomField.cs" />
     <Compile Include="Kaboom\KaboomFieldSolver.cs" />
@@ -73,6 +74,8 @@
     <Compile Include="FieldExtensions.cs" />
     <Compile Include="FieldProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Wrapper\IProvideRandom.cs" />
+    <Compile Include="Wrapper\RandomProvider.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -88,6 +91,7 @@
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.NetFramework.Analyzers.dll" />
     <Analyzer Include="..\packages\Microsoft.NetFramework.Analyzers.2.9.8\analyzers\dotnet\cs\Microsoft.NetFramework.CSharp.Analyzers.dll" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
