--- a/KaboomEngineTests/KaboomEngineTests.csproj
+++ b/KaboomEngineTests/KaboomEngineTests.csproj
@@ -57,6 +57,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="KaboomEngineTestsCli.cs" />
+    <Compile Include="KaboomTests\ConstraintsGeneratorTests\ConstraintsGeneratorTests.cs" />
+    <Compile Include="KaboomTests\ConstraintsGeneratorTests\GenerateConstraintsTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +70,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
