--- a/KaboomEngine/KaboomEngine.csproj
+++ b/KaboomEngine/KaboomEngine.csproj
@@ -30,6 +30,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>KaboomEngine.xml</DocumentationFile>
+    <CodeAnalysisRuleSet>KaboomEngine.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -39,6 +40,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <DocumentationFile>KaboomEngine.xml</DocumentationFile>
+    <CodeAnalysisRuleSet>KaboomEngine.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="JetBrains.Annotations, Version=2019.1.3.0, Culture=neutral, PublicKeyToken=1010a0d8d6380325, processorArchitecture=MSIL">
@@ -78,6 +80,7 @@
     <Compile Include="Wrapper\RandomProvider.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="KaboomEngine.ruleset" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
