--- a/KaboomEngineTests/KaboomEngineTests.csproj
+++ b/KaboomEngineTests/KaboomEngineTests.csproj
@@ -43,6 +43,15 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="FluentAssertions, Version=5.9.0.0, Culture=neutral, PublicKeyToken=33f2691a05b67b6a, processorArchitecture=MSIL">
+      <HintPath>..\packages\FluentAssertions.5.9.0\lib\net47\FluentAssertions.dll</HintPath>
+    </Reference>
+    <Reference Include="KaboomEngine.Fakes">
+      <HintPath>FakesAssemblies\KaboomEngine.Fakes.dll</HintPath>
+    </Reference>
+    <Reference Include="Microsoft.QualityTools.Testing.Fakes, Version=12.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="Microsoft.Solver.Foundation, Version=3.0.2.10889, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Microsoft.Solver.Foundation.3.1.0\lib\Microsoft.Solver.Foundation.dll</HintPath>
     </Reference>
@@ -53,12 +62,19 @@
       <HintPath>..\packages\MSTest.TestFramework.2.0.0\lib\net45\Microsoft.VisualStudio.TestPlatform.TestFramework.Extensions.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Xml" />
+    <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FieldExtensionsTests\FieldExtensionsTests.cs" />
+    <Compile Include="FieldExtensionsTests\GetCoordinatesAdjacentToTests.cs" />
     <Compile Include="KaboomEngineTestsCli.cs" />
     <Compile Include="KaboomTests\ConstraintsGeneratorTests\ConstraintsGeneratorTests.cs" />
     <Compile Include="KaboomTests\ConstraintsGeneratorTests\GenerateConstraintsTests.cs" />
+    <Compile Include="KaboomTests\KaboomFieldSolverTests\KaboomFieldSolverTests.cs" />
+    <Compile Include="KaboomTests\KaboomFieldSolverTests\SolveTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -68,6 +84,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Fakes Include="Fakes\KaboomEngine.fakes" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
