--- a/Kaboom/Kaboom.csproj
+++ b/Kaboom/Kaboom.csproj
@@ -18,7 +18,7 @@
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <Deterministic>true</Deterministic>
+    <Deterministic>false</Deterministic>
     <LangVersion>latest</LangVersion>
     <NuGetPackageImportStamp>
     </NuGetPackageImportStamp>
@@ -70,6 +70,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Page Include="Views\DlgAbout.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Views\DlgCustomGame.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -98,6 +102,9 @@
     <Compile Include="ViewModels\KaboomCellState.cs" />
     <Compile Include="ViewModels\KaboomDebugState.cs" />
     <Compile Include="ViewModels\MainWindowModel.cs" />
+    <Compile Include="Views\DlgAbout.xaml.cs">
+      <DependentUpon>DlgAbout.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Views\DlgCustomGame.xaml.cs">
       <DependentUpon>DlgCustomGame.xaml</DependentUpon>
     </Compile>
