sqrt(random) seems to solve mine adherence problem

--- a/Kaboom/App.config
+++ b/Kaboom/App.config
@@ -34,6 +34,9 @@
             <setting name="Debug" serializeAs="String">
                 <value>False</value>
             </setting>
+            <setting name="Updated" serializeAs="String">
+                <value>False</value>
+            </setting>
         </Com.Revo.Games.Kaboom.Properties.Settings>
     </userSettings>
 </configuration>
