--- a/KaboomEngineTests/KaboomEngineTests.csproj
+++ b/KaboomEngineTests/KaboomEngineTests.csproj
@@ -71,6 +71,8 @@
   <ItemGroup>
     <Compile Include="FieldExtensionsTests\FieldExtensionsTests.cs" />
     <Compile Include="FieldExtensionsTests\GetCoordinatesAdjacentToTests.cs" />
+    <Compile Include="HelperTests\KaboomRandomTests\KaboomRandomTests.cs" />
+    <Compile Include="HelperTests\KaboomRandomTests\NextTests.cs" />
     <Compile Include="KaboomEngineTestsCli.cs" />
     <Compile Include="KaboomFieldSerializer.cs" />
     <Compile Include="KaboomTests\ConstraintsGeneratorTests\ConstraintsGeneratorTests.cs" />
@@ -99,6 +101,7 @@
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
