--- a/KaboomEngine/KaboomEngine.csproj
+++ b/KaboomEngine/KaboomEngine.csproj
@@ -78,8 +78,8 @@
     <Compile Include="FieldExtensions.cs" />
     <Compile Include="FieldProvider.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Helper\IProvideRandom.cs" />
-    <Compile Include="Helper\KaboomRandom.cs" />
+    <Compile Include="Kaboom\IProvideRandom.cs" />
+    <Compile Include="Kaboom\KaboomRandom.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="..\.editorconfig">
